# word2vec_demo

./: .gitignore  README.md  createModel.py  pyproject.toml  requirements.txt  testModel.py
src/: download.sh
